--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,12 @@
 </head>
 <body>
 
+    <h1>Dizi ( Array ) </h1>
+
     
+    <h2 id="info"></h2>
+
     <script src="dizi.js"></script>
 </body>
+
 </html>
